[package]
name = "sql-parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.30.0"
quaint = { git = "https://github.com/prisma/quaint.git", features = ["all"] }
tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "parking_lot", "time"] }
anyhow = "1.0.69"
indoc = "2.0.0"
expect-test = "1.4.1"
